turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:42: error: unclosed comment
/*
^Turmite:42: error: unclosed comment
/*
^Turmite:42: error: unclosed comment
/*
^Turmite:3: error: Missing closing brace `}' assumed here
var state = 0;
^Turmite:3: error: expected class or object definition
var state = 0;
^Turmite:4: error: expected class or object definition
val STOP : Int = 0
^Turmite:5: error: expected class or object definition
val DEVANT : Int = 1
^Turmite:6: error: expected class or object definition
val GAUCHE : Int 2
^Turmite:7: error: expected class or object definition
val ARRIERE : Int = 4
^Turmite:8: error: expected class or object definition
val DROITE : Int = 8
^Turmite:10: error: expected class or object definition
def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
^Turmite:42: error: unclosed comment
/*
^